--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <section class="fon">
                 
-                <button type="button" class="btn btn-default btn-circle btn-lg" data-toggle="tooltip" data-placement="top" title="Telecharger"><img src="./img/download.svg" alt="Logo" ></button>
+                <button type="button" class="btn btn-default btn-circle btn-lg" data-toggle="tooltip" data-placement="top" title="Télécharger"><img src="./img/download.svg" alt="Logo" ></button>
                 <button type="button" id="btnClear" class="btn btn-default btn-circle btn-xl"data-toggle="tooltip" data-placement="top" title="Clear"><i class="fas big fa-times"></i></button>
                 <button type="button" id="btnCopy" class="btn  btn-circle btn-lg" data-toggle="tooltip" data-placement="top" title="Copier le text"><i class="far fa-copy"></i></button>
         </section>
